rever push notification done
